@startuml
'https://plantuml.com/class-diagram

class InventoryApp{
    public void start()
}

class ErrorWindowController{
    public static void generateError(String errorDescription)
}

class InventoryManager{
    public ArrayList itemInventory

    public ArrayList<InventoryItem> searchInventory(String searchQuery)
}


class MenuController{
        //FXML CONTENT//


        public TableColumn ItemCol;

        public TableColumn SerialNumberCol;

        public TableColumn ValueCol;

        public TableView InformationTable;

        public Button SearchButton;

        public TextField ItemNameTextField;

        public TextField ItemSerialNumberTextField;

        public TextField ItemValueTextField;

        //BACKEND VARS//


     HashMap<InventoryItem> ItemHolder

    public void initialize()

     public void NewMenuButtonClicked(ActionEvent actionEvent)


     public void SaveInventoryButtonClicked(ActionEvent actionEvent)


     public void LoadInventoryButtonClicked(ActionEvent actionEvent)


     public void AddItemButtonClicked(ActionEvent actionEvent)


     public void DeleteItemButtonClicked(ActionEvent actionEvent)


     public void SearchButtonClicked(ActionEvent actionEvent)

     public void newItemName()

     public void NewSerialNum()

     public void NewValue()

}

class InventoryItem{
   private Double monetaryValue
   private String serialNum
   private String itemName

   Public InventoryItem(Double monetaryValue,String serialNum, String itemName)

   getItemName()
   setItemName(String newName)

   getSerialNum()
   setSerialNum(String newSerial)

   getMonetaryValue()
   setMonetaryValue(String newValue)

}

 class FileManager{
    private File filePath

    FileManager(String filePath)
    FileManager(File  filePath)




    getFile()

}

class LoadFile{

    LoadFile(String filePath)
    LoadFile(File filePath)


    public InventoryManager loadInventory()

    private ArrayList<InventoryItem> grabInventoryTSV()

    private InventoryItem generateItemTSV(String line)

    private ArrayList<InventoryItem> grabInventoryHTML()

    private InventoryItem generateItemHTML(String[] itemContent)




}

class SaveFile{


  SaveFile(String filePath,String fileName)
  SaveFile(File filePath,String fileName)

   public boolean saveFile(InventoryManager inventory)

    private boolean saveHTML(ArrayList<InventoryItem> inventoryItems,FileWriter author)

    private boolean saveTSV(ArrayList<InventoryItem> inventoryItems, FileWriter author)
}


javafx.Application <|-- InventoryApp
LoadFile <|-- FileManager
SaveFile <|-- FileManager

InventoryApp --> MenuController


MenuController--> LoadFile
MenuController-->SaveFile

MenuController-InventoryManager
InventoryManager-InventoryItem

@enduml